--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
   },
   "dependencies": {
     "@mturley-latest/react-table-batteries": "^1.0.4",
-    "@patternfly/patternfly": "5.3.1",
-    "@patternfly/react-core": "5.3.4",
-    "@patternfly/react-icons": "5.3.2",
-    "@patternfly/react-styles": "5.3.1",
-    "@patternfly/react-table": "5.3.4",
+    "@patternfly/patternfly": "6.0.0-alpha.205",
+    "@patternfly/react-core": "6.0.0-alpha.100",
+    "@patternfly/react-icons": "6.0.0-alpha.35",
+    "@patternfly/react-styles": "6.0.0-alpha.34",
+    "@patternfly/react-table": "6.0.0-alpha.101",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.4",
     "detect-browser": "^5.3.0",
